@@ -171,6 +171,7 @@ Release 0.9.11
 - change ZMCheckoutConfirmationController to provide $orderFormUrl and
   $orderFormContent to avoid issues when no payment type required (mostly when
 	a coupon or gv covers the order total); templates: checkout_confirmation.php
+- unitTests: add option to hide error/exception messages
 
 Release 0.9.10
 - restructure store and admin code into separate apps with most of the store
